Make project dependent on Windows Forms. Refactor projec because Windows Forms is the worst, and add the open dialog.

--- a/PicoMapper/PicoMapper.csproj
+++ b/PicoMapper/PicoMapper.csproj
@@ -10,7 +10,7 @@
     
 	<PublishReadyToRun>false</PublishReadyToRun>
     <TieredCompilation>false</TieredCompilation>
-    <UseWindowsForms>false</UseWindowsForms>
+    <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 	
   <PropertyGroup>
